<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#191919"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/titoloLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#fef4e8"
        android:textSize="48sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/input_text_name"
            android:importantForAutofill="no"
            android:padding="5dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/input_text_cognome"
            android:padding="5dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/input_text_username"
            android:padding="5dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/input_text_email"
            android:padding="5dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#13667F"
            android:text="@string/signup_button"
            android:textColor="#fef4e8" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>