<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#191919">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/image_logo" />

    <TextView
        android:id="@+id/TitoloLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="#fef4e8"
        android:textSize="48sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitoloLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernameET"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_radius"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="5dp"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/spuntaRC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remember_me"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/spuntaPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="clickMP"
                android:text="@string/show_password"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="#13667F"
            android:onClick="cLickAccedi"
            android:text="@string/login_button"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:onClick="clickReg"
            android:text="@string/underline"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>